# mymathlib

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml
book/: .buildinfo  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  search.html  searchindex.js
book/_sources/tutorials/: geometry-usage.ipynb
book/tutorials/: arithmetic-usage.html  geometry-usage.html
docs/book/: _config.yml  _toc.yml
docs/book/tutorials/: arithmetic-usage.ipynb
mymathlib/: __init__.py  arithmetic.py  geometry.py
tests/: test_arithmetic.py  test_geometry.py
