[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mymathlib"
version = "0.1.0"
description = "A simple math library with arithmetic and geometry functions."
readme = "README.md"
authors = [
    { name="Your Name", email="your@email.com" }
]
license = {text = "MIT"}
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/mymathlib"

[tool.setuptools]
packages = ["mymathlib"]
